ファイル：make_db_jasmine_chiyoda_page1_all_property　をリポジトリに上げます。 ・1区１ページの複数物件の取得完了しました。

--- a/make_db/make_db_jasmine_chiyoda_page1_property1.ipynb
+++ b/make_db/make_db_jasmine_chiyoda_page1_property1.ipynb
@@ -269,13 +269,13 @@
       "     </li>\n",
       "    </ul>\n",
       "    <span class=\"dn\" id=\"js-mylistbukkencountcookie\">\n",
-      "     \"20240519114325:H:0\"\n",
+      "     \"20240519125449:H:0\"\n",
       "    </span>\n",
       "    <span class=\"dn\" id=\"js-mylistkaishacountcookie\">\n",
-      "     \"20240519114325:H:0\"\n",
+      "     \"20240519125449:H:0\"\n",
       "    </span>\n",
       "    <span class=\"dn\" id=\"js-mylistkensakujokencountcookie\">\n",
-      "     \"20240519114325:H:0\"\n",
+      "     \"20240519125449:H:0\"\n",
       "    </span>\n",
       "   </div>\n",
       "  </div>\n",
@@ -614,7 +614,7 @@
       "             賃貸\n",
       "             <div class=\"tabhit-numgroup\">\n",
       "              <span class=\"tabhit-num\">\n",
-      "               66588\n",
+      "               66953\n",
       "              </span>\n",
       "              <span class=\"tabhit-txt\">\n",
       "               件\n",
@@ -683,7 +683,7 @@
       "          </div>\n",
       "          <div class=\"paginate_set\">\n",
       "           <div class=\"paginate_set-hit\">\n",
-      "            66588\n",
+      "            66953\n",
       "            <span>\n",
       "             件\n",
       "            </span>\n",
@@ -7790,7 +7790,7 @@
       "         </div>\n",
       "         <div class=\"pagination_set\">\n",
       "          <div class=\"pagination_set-hit\">\n",
-      "           66,588\n",
+      "           66,953\n",
       "           <span>\n",
       "            件\n",
       "           </span>\n",
@@ -7833,8 +7833,8 @@
       "             ...\n",
       "            </li>\n",
       "            <li>\n",
-      "             <a href=\"/jj/chintai/ichiran/FR301FC011/?ar=030&amp;bs=040&amp;fw=%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA&amp;page=2220\">\n",
-      "              2220\n",
+      "             <a href=\"/jj/chintai/ichiran/FR301FC011/?ar=030&amp;bs=040&amp;fw=%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA&amp;page=2232\">\n",
+      "              2232\n",
       "             </a>\n",
       "            </li>\n",
       "           </ol>\n",
@@ -7853,7 +7853,7 @@
       "             賃貸\n",
       "             <div class=\"tabhit-numgroup\">\n",
       "              <span class=\"tabhit-num\">\n",
-      "               66588\n",
+      "               66953\n",
       "              </span>\n",
       "              <span class=\"tabhit-txt\">\n",
       "               件\n",
@@ -7892,6 +7892,23 @@
       "           <ul class=\"themesearch-list\">\n",
       "            <li class=\"themesearch-body\">\n",
       "             <!-- ↓===================================================================================================================↓ -->\n",
+      "             <!-- ↓/list/FR_040_030_CL_theme_03.html↓ -->\n",
+      "             <a href=\"/tokushu/selection/chintai_kanto/th_7.html\">\n",
+      "              <div>\n",
+      "               <img alt=\"\" class=\"ui-thumb ui-thumb--1\" height=\"110\" src=\"/edit/assets/suumo/img/include/inc_FR_list_030_theme_03.jpg\" width=\"150\"/>\n",
+      "              </div>\n",
+      "              <div class=\"themesearch-title\">\n",
+      "               分譲タイプ\n",
+      "              </div>\n",
+      "             </a>\n",
+      "             <p class=\"themesearch-txt\">\n",
+      "              ハイスペックで設備が充実！快適な新生活を始めよう\n",
+      "             </p>\n",
+      "             <!-- ↑/list/FR_040_030_CL_theme_03.html↑ -->\n",
+      "             <!-- ↑===================================================================================================================↑ -->\n",
+      "            </li>\n",
+      "            <li class=\"themesearch-body\">\n",
+      "             <!-- ↓===================================================================================================================↓ -->\n",
       "             <!-- ↓/list/FR_040_030_CL_theme_02.html↓ -->\n",
       "             <a href=\"/tokushu/selection/chintai_kanto/th_6.html\">\n",
       "              <div>\n",
@@ -7909,6 +7926,27 @@
       "            </li>\n",
       "            <li class=\"themesearch-body\">\n",
       "             <!-- ↓===================================================================================================================↓ -->\n",
+      "             <!-- ↓/list/FR_040_030_CL_theme_07.html↓ -->\n",
+      "             <a href=\"/tokushu/selection/chintai_kanto/th_31.html\">\n",
+      "              <div>\n",
+      "               <img alt=\"\" class=\"ui-thumb ui-thumb--1\" height=\"110\" src=\"/edit/assets/suumo/img/include/inc_FR_list_030_theme_07.jpg\" width=\"150\"/>\n",
+      "              </div>\n",
+      "              <div class=\"themesearch-title\">\n",
+      "               ゆったりＬＤＫタイプ\n",
+      "              </div>\n",
+      "             </a>\n",
+      "             <p class=\"themesearch-txt\">\n",
+      "              45m\n",
+      "              <sup>\n",
+      "               2\n",
+      "              </sup>\n",
+      "              以上！ゆったり広々暮らせる間取り\n",
+      "             </p>\n",
+      "             <!-- ↑/list/FR_040_030_CL_theme_07.html↑ -->\n",
+      "             <!-- ↑===================================================================================================================↑ -->\n",
+      "            </li>\n",
+      "            <li class=\"themesearch-body\">\n",
+      "             <!-- ↓===================================================================================================================↓ -->\n",
       "             <!-- ↓/list/FR_040_030_CL_theme_08.html↓ -->\n",
       "             <a href=\"/tokushu/selection/chintai_kanto/th_28.html\">\n",
       "              <div>\n",
@@ -7922,36 +7960,6 @@
       "              飼い主もペットも快適に暮らせる！\n",
       "             </p>\n",
       "             <!-- ↑/list/FR_040_030_CL_theme_08.html↑ -->\n",
-      "             <!-- ↑===================================================================================================================↑ -->\n",
-      "            </li>\n",
-      "            <li class=\"themesearch-body\">\n",
-      "             <!-- ↓===================================================================================================================↓ -->\n",
-      "             <!-- ↓/list/FR_040_030_CL_theme_05.html↓ -->\n",
-      "             <a href=\"/tokushu/selection/chintai_kanto/th_2.html\">\n",
-      "              <div>\n",
-      "               <img alt=\"\" class=\"ui-thumb ui-thumb--1\" height=\"110\" src=\"/edit/assets/suumo/img/include/inc_FR_list_030_theme_05.jpg\" width=\"150\"/>\n",
-      "              </div>\n",
-      "              <div class=\"themesearch-title\">\n",
-      "               新築&amp;築浅\n",
-      "              </div>\n",
-      "             </a>\n",
-      "             <p class=\"themesearch-txt\">\n",
-      "              新生活は、やっぱりキレイなお部屋で始めたい！\n",
-      "             </p>\n",
-      "             <!-- ↑/list/FR_040_030_CL_theme_05.html↑ -->\n",
-      "             <!-- ↑===================================================================================================================↑ -->\n",
-      "            </li>\n",
-      "            <li class=\"themesearch-body\">\n",
-      "             <!-- ↓===================================================================================================================↓ -->\n",
-      "             <!-- ↓/list/FR_040_030_CL_theme_04.html↓ -->\n",
-      "             <!--<a href=\"/tokushu/selection/chintai_kanto/th_9.html\">\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\t<div>\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\t\t<img src=\"/edit/assets/suumo/img/include/inc_FR_list_030_theme_04.jpg\" width=\"150\" height=\"110\" alt=\"\" class=\"ui-thumb ui-thumb--1\" />\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\t</div>\n",
-      "\t\t\t\t\t\t\t\t\t\t\t\t<div class=\"themesearch-title\">賃料5万円未満</div>\n",
-      "\t\t\t\t\t\t\t\t\t\t\t</a>\n",
-      "\t\t\t\t\t\t\t\t\t\t\t<p class=\"themesearch-txt\">管理費込みで5万円未満！安さにこだわるなら必見</p>-->\n",
-      "             <!-- ↑/list/FR_040_030_CL_theme_04.html↑ -->\n",
       "             <!-- ↑===================================================================================================================↑ -->\n",
       "            </li>\n",
       "           </ul>\n",
@@ -8135,16 +8143,16 @@
       "                   都道府県で絞り込む\n",
       "                  </option>\n",
       "                  <option value=\"13\">\n",
-      "                   東京都     65470件\n",
+      "                   東京都     65825件\n",
       "                  </option>\n",
       "                  <option value=\"14\">\n",
-      "                   神奈川県     222件\n",
+      "                   神奈川県     226件\n",
       "                  </option>\n",
       "                  <option value=\"11\">\n",
-      "                   埼玉県     441件\n",
+      "                   埼玉県     444件\n",
       "                  </option>\n",
       "                  <option value=\"12\">\n",
-      "                   千葉県     388件\n",
+      "                   千葉県     391件\n",
       "                  </option>\n",
       "                  <option value=\"08\">\n",
       "                   茨城県     33件\n",
@@ -9884,7 +9892,7 @@
       "\n",
       "\t// 賃貸ローテーションバナー\n",
       "\t\n",
-      "\t$('#js-fr_lotation_banner').load('/jj/common/parts/JJ901FJ901/?ar=030&times=1716085405633&kkkKoseiCd=C900001&dc=4'.unEscapeHTML(), function () {\n",
+      "\t$('#js-fr_lotation_banner').load('/jj/common/parts/JJ901FJ901/?ar=030&times=1716089689525&kkkKoseiCd=C900001&dc=4'.unEscapeHTML(), function () {\n",
       "\t\tif(!$('#js-fr_lotation_banner').html().match(/<span id=\"js-banner-none\">/)) {\n",
       "\t\t\t$('#js-fr_lotation_banner').css('display', 'block');\n",
       "\t\t}\n",
@@ -10122,7 +10130,7 @@
    "outputs": [],
    "source": [
     "# DataFrameをCSVファイルに出力\n",
-    "df.to_csv('output.csv', encoding='utf-8-sig')\n",
+    "df.to_csv('chiyoda_page1_property1.csv', encoding='utf-8-sig')\n",
     "\n"
    ]
   }
