・1区１ページの複数物件の取得完了 ・.sqlite 形式データを格納しました

--- a/make_db/make_db_jasmine_chiyoda_page1_all_property.ipynb
+++ b/make_db/make_db_jasmine_chiyoda_page1_all_property.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,6 @@
     }
    ],
    "source": [
-    "\n",
     "# 物件のリストを初期化\n",
     "properties_list = []\n",
     "\n",
@@ -221,6 +220,109 @@
     "    print(\"物件情報が見つかりませんでした。\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "現在の作業ディレクトリ: c:\\Users\\jiebing\\Desktop\\ChintaiAPP\\make_db\n",
+      "データがCSVファイル 'chiyoda_page1_all_property.csv' に保存されました。\n",
+      "データがSQLiteデータベース 'c:\\Users\\jiebing\\Desktop\\ChintaiAPP\\make_db\\chiyoda_page1_all_property.sqlite' に保存されました。\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# 現在の作業ディレクトリを取得\n",
+    "current_directory = os.getcwd()\n",
+    "print(\"現在の作業ディレクトリ:\", current_directory)\n",
+    "\n",
+    "# 物件のリストを初期化\n",
+    "properties_list = []\n",
+    "\n",
+    "# すべての物件リストアイテムを取得\n",
+    "property_items = soup.find_all('div', class_='property')\n",
+    "\n",
+    "for item in property_items:\n",
+    "    property_data = {\n",
+    "        '物件名': item.find('a', class_='js-cassetLinkHref').text if item.find('a', class_='js-cassetLinkHref') else '-',\n",
+    "        'URL': 'https://suumo.jp' + item.find('a', class_='js-cassetLinkHref')['href'] if item.find('a', class_='js-cassetLinkHref') else '-',\n",
+    "        'イメージ画像': item.find('img', class_='js-noContextMenu')['rel'] if item.find('img', class_='js-noContextMenu') else '-',\n",
+    "        '賃料': int(float(item.find('div', class_='detailbox-property-point').text.replace('万円', '')) * 10000) if item.find('div', class_='detailbox-property-point') else '-',\n",
+    "        '管理費': item.find('td', class_='detailbox-property--col1').find_all('div')[1].text.replace('管理費 ', '') if item.find('td', class_='detailbox-property--col1') and len(item.find('td', class_='detailbox-property--col1').find_all('div')) > 1 else '-',\n",
+    "        '間取り': item.find('td', class_='detailbox-property--col3').find_all('div')[0].text if item.find('td', class_='detailbox-property--col3') else '-',\n",
+    "        '専有面積': item.find('td', class_='detailbox-property--col3').find_all('div')[1].text.replace('\\n', '').strip() if item.find('td', class_='detailbox-property--col3') else '-',\n",
+    "        '向き': item.select('td.detailbox-property--col3')[0].find_all('div')[2].text if len(item.select('td.detailbox-property--col3')[0].find_all('div')) > 2 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
+    "        '物件種別': item.select('td.detailbox-property--col3')[1].find_all('div')[0].text if len(item.select('td.detailbox-property--col3')) > 1 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
+    "        '築年数': item.select('td.detailbox-property--col3')[1].find_all('div')[1].text if len(item.select('td.detailbox-property--col3')[1].find_all('div')) > 1 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
+    "        '住所': item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])').text.strip() if item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])') else '-',\n",
+    "        '最寄り駅と距離': item.select_one('.detailnote-box > div').text.strip() if item.select_one('.detailnote-box > div') else '-',\n",
+    "        '敷金': '-' if item.find('div', string='敷') is None or item.find('div', string='敷').find_next('div').text == '-' else item.find('div', string='敷').find_next('div').text,\n",
+    "        '礼金': '-' if item.find('div', string='礼') is None or item.find('div', string='礼').find_next('div').text == '-' else item.find('div', string='礼').find_next('div').text,\n",
+    "        '保証金': '-' if item.find('div', class_='detailbox-property-inactive').text.strip() == '保証金 -' else item.find('div', class_='detailbox-property-inactive').text.strip().replace('保証金', '').strip(),\n",
+    "        '敷引・償却': '-' if item.find('div', string='敷引・償却') is None or item.find('div', string='敷引・償却').find_next('div').text == '-' else item.find('div', string='敷引・償却').find_next('div').text,\n",
+    "        '取り扱い店舗': item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)').text.strip() if item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)') else '-',\n",
+    "        '取り扱い店舗の電話番号': item.find('div', class_='ui-text--bold').text.strip() if item.find('div', class_='ui-text--bold') else '-'\n",
+    "    }\n",
+    "\n",
+    "    properties_list.append(property_data)\n",
+    "\n",
+    "# データフレームに変換\n",
+    "df = pd.DataFrame(properties_list)\n",
+    "\n",
+    "# データフレームをCSVファイルに出力\n",
+    "df.to_csv('chiyoda_page1_all_property.csv', index=False, encoding='utf-8-sig')\n",
+    "print(\"データがCSVファイル 'chiyoda_page1_all_property.csv' に保存されました。\")\n",
+    "\n",
+    "# SQLiteデータベースのパスを設定（現在の作業ディレクトリに保存）\n",
+    "database_path = os.path.join(current_directory, 'chiyoda_page1_all_property.sqlite')\n",
+    "\n",
+    "# SQLiteデータベースに接続（なければ新規作成）\n",
+    "conn = sqlite3.connect('chiyoda_page1_all_property.sqlite')\n",
+    "c = conn.cursor()\n",
+    "\n",
+    "# テーブルを作成\n",
+    "c.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS properties (\n",
+    "    物件名 TEXT,\n",
+    "    URL TEXT,\n",
+    "    イメージ画像 TEXT,\n",
+    "    賃料 INTEGER,\n",
+    "    管理費 TEXT,\n",
+    "    間取り TEXT,\n",
+    "    専有面積 TEXT,\n",
+    "    向き TEXT,\n",
+    "    物件種別 TEXT,\n",
+    "    築年数 TEXT,\n",
+    "    住所 TEXT,\n",
+    "    最寄り駅と距離 TEXT,\n",
+    "    敷金 TEXT,\n",
+    "    礼金 TEXT,\n",
+    "    保証金 TEXT,\n",
+    "    敷引・償却 TEXT,\n",
+    "    取り扱い店舗 TEXT,\n",
+    "    取り扱い店舗の電話番号 TEXT\n",
+    ")\n",
+    "''')\n",
+    "\n",
+    "# データフレームの内容をSQLiteに挿入\n",
+    "df.to_sql('properties', conn, if_exists='replace', index=False)\n",
+    "\n",
+    "# コネクションを閉じる\n",
+    "conn.close()\n",
+    "print(f\"データがSQLiteデータベース '{database_path}' に保存されました。\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
